deploy/application/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    app: search-app
  namespace: distributed-systems
spec:
  type: ClusterIP
  selector:
    app: search-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
