deploy/application/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distributed-systems-ingress
  namespace: distributed-systems
spec:
  ingressClassName: nginx
  rules:
    - host: app.distributed-systems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 8080
